Penyesuaian Sampul dan Background

--- a/subcontents/502/16-dinas-tenaga-kerja.tex
+++ b/subcontents/502/16-dinas-tenaga-kerja.tex
@@ -1,5 +1,11 @@
 \subsection{Dinas Tenaga Kerja}
 
+Daftar Standar Operasional Prosedur (SOP) pada Dinas Tenaga Kerja menyajikan
+prosedur kerja yang disusun untuk mendukung penyelenggaraan urusan
+ketenagakerjaan di daerah. SOP yang ditampilkan mencerminkan pelaksanaan tugas
+dan fungsi dinas dalam pelayanan ketenagakerjaan, pembinaan hubungan industrial,
+penempatan tenaga kerja, serta perlindungan tenaga kerja.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
