--- a/subcontents/502/21-dinas-arsip-perpustakaan.tex
+++ b/subcontents/502/21-dinas-arsip-perpustakaan.tex
@@ -1,5 +1,11 @@
 \subsection{Dinas Arsip dan Perpustakaan}
 
+Daftar Standar Operasional Prosedur (SOP) pada Dinas Arsip dan Perpustakaan
+menyajikan prosedur kerja yang disusun untuk mendukung penyelenggaraan urusan
+kearsipan dan perpustakaan di daerah. SOP yang ditampilkan mencerminkan
+pelaksanaan tugas dan fungsi dinas dalam pengelolaan arsip, pelayanan
+perpustakaan, serta pembinaan literasi dan dokumentasi daerah.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
