--- a/subcontents/502/22-satpolpp-pemadam.tex
+++ b/subcontents/502/22-satpolpp-pemadam.tex
@@ -1,5 +1,11 @@
 \subsection{Satuan Polisi Pamong Praja dan Pemadam Kebakaran}
 
+Daftar Standar Operasional Prosedur (SOP) pada Satuan Polisi Pamong Praja dan
+Pemadam Kebakaran menyajikan prosedur kerja yang disusun untuk mendukung
+pelaksanaan tugas penegakan peraturan daerah, penyelenggaraan ketertiban umum
+dan ketenteraman masyarakat, serta pelayanan pemadam kebakaran dan
+penyelamatan.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
