--- a/subcontents/502/32-dinas-pangan.tex
+++ b/subcontents/502/32-dinas-pangan.tex
@@ -34,7 +34,7 @@ p{2.2cm}|
 \endlastfoot
 
 
-& Tidak Ada SOP & -- & -- & -- \\ \hline
+& SOP Belum Tersedia & -- & -- & -- \\ \hline
 
 
 \end{longtable}
