--- a/subcontents/502/10-dinas-perumahan-kawasan-permukiman-dan-pertanahan.tex
+++ b/subcontents/502/10-dinas-perumahan-kawasan-permukiman-dan-pertanahan.tex
@@ -28,7 +28,7 @@ p{2.2cm}|
 \endlastfoot
 
 
-& Tidak Ada SOP & -- & -- & -- \\ \hline
+& SOP Belum Tersedia & -- & -- & -- \\ \hline
 
 
 \end{longtable}
