--- a/subcontents/502/12-dinas-pertanian.tex
+++ b/subcontents/502/12-dinas-pertanian.tex
@@ -31,7 +31,7 @@ p{2.2cm}|
 \endlastfoot
 
 
-& Tidak Ada SOP & -- & -- & -- \\ \hline
+& SOP Belum Tersedia & -- & -- & -- \\ \hline
 
 
 \end{longtable}
