Penyesuaian BAB 5 dan SAmpul Background

--- a/001-kata-pengantar-akhir.tex
+++ b/001-kata-pengantar-akhir.tex
@@ -23,7 +23,7 @@ dan akuntabel di lingkungan Pemerintah Kabupaten Cianjur.
 
 \vspace{1cm}
 
-\noindent Cianjur, Desember 2025 \\
+\noindent Cianjur, November 2025 \\
 
 \vspace{12pt}
 \vspace{12pt}
