--- a/500-bab-5-pembahasan.tex
+++ b/500-bab-5-pembahasan.tex
@@ -57,7 +57,7 @@ menunjukkan tingkat partisipasi dan capaian penyusunan SOP pada setiap instansi,
 serta memberikan gambaran mengenai variasi jumlah SOP sesuai dengan tugas dan
 fungsi organisasi.
 
-{\footnotesize
+{\small
 \begin{longtable}{|
     >{\centering\arraybackslash}p{1cm}|
     p{10.3cm}|
@@ -80,15 +80,15 @@ fungsi organisasi.
 \hline
 \endlastfoot
 
-1 & Sekretariat Daerah & 5 \\ \hline
-2 & Sekretariat DPRD & 65 \\ \hline
-3 & Inspektorat Daerah & 1 \\ \hline
-4 & Dinas Pendidikan, Pemuda dan Olahraga & 1 \\ \hline
-5 & Dinas Kebudayaan dan Pariwisata & 2 \\ \hline
-6 & Dinas Kesehatan & 47 \\ \hline
-7 & Dinas Perhubungan & 2 \\ \hline
-8 & Dinas Komunikasi, Informatika dan Persandian & 8 \\ \hline
-9 & Dinas Pekerjaan Umum dan Tata Ruang & 6 \\ \hline
+1  & Sekretariat Daerah & 6 \\ \hline
+2  & Sekretariat DPRD & 65 \\ \hline
+3  & Inspektorat Daerah & 1 \\ \hline
+4  & Dinas Pendidikan, Pemuda dan Olahraga & 1 \\ \hline
+5  & Dinas Kebudayaan dan Pariwisata & 2 \\ \hline
+6  & Dinas Kesehatan & 47 \\ \hline
+7  & Dinas Perhubungan & 2 \\ \hline
+8  & Dinas Komunikasi, Informatika dan Persandian & 8 \\ \hline
+9  & Dinas Pekerjaan Umum dan Tata Ruang & 6 \\ \hline
 10 & Dinas Perumahan dan Kawasan Permukiman & 0 \\ \hline
 11 & Dinas Koperasi, Usaha Kecil, Menengah, Perdagangan dan Perindustrian & 10 \\ \hline
 12 & Dinas Pertanian, Hortikultura, dan Perkebunan & 0 \\ \hline
@@ -109,59 +109,51 @@ fungsi organisasi.
 27 & Badan Kepegawaian dan Pengembangan Sumber Daya Manusia & 11 \\ \hline
 28 & Badan Penanggulangan Bencana Daerah & 22 \\ \hline
 29 & Badan Kesatuan Bangsa dan Politik & 2 \\ \hline
-30 & Bagian Umum dan Keuangan Sekretariat Daerah & 1 \\ \hline
-31 & Bagian Organisasi Sekretariat Daerah & 0 \\ \hline
-32 & Bagian Pemerintahan Sekretariat Daerah & 0 \\ \hline
-33 & Bagian Kesejahteraan Rakyat Sekretariat Daerah & 0 \\ \hline
-34 & Bagian Hukum Sekretariat Daerah & 0 \\ \hline
-35 & Bagian Administrasi Pembangunan Sekretariat Daerah & 0 \\ \hline
-36 & Bagian Perekonomian dan Sumber Daya Alam Sekretariat Daerah & 0 \\ \hline
-37 & Bagian PBJ Sekretariat Daerah & 0 \\ \hline
-38 & Bagian Protokol dan Komunikasi Pimpinan Sekretariat Daerah & 0 \\ \hline
-39 & RSUD dan Puskesmas & 61 \\ \hline
-40 & RSUD Sayang & 1 \\ \hline
-41 & RSUD Cimacan & 0 \\ \hline
-42 & RSUD Pagelaran & 0 \\ \hline
-43 & RSUD Sindangbarang & 0 \\ \hline
-44 & Kecamatan & 2 \\ \hline
-45 & Kecamatan Pagelaran & 1 \\ \hline
-46 & Kecamatan Agrabinta & 8 \\ \hline
-47 & Kecamatan Bojongpicung & 2 \\ \hline
-48 & Kecamatan Cianjur & 13 \\ \hline
-49 & Kecamatan Cibeber & 20 \\ \hline
-50 & Kecamatan Cilaku & 10 \\ \hline
-51 & Kecamatan Ciranjang & 2 \\ \hline
-52 & Kecamatan Cugenang & 16 \\ \hline
-53 & Kecamatan Cikalongkulon & 2 \\ \hline
-54 & Kecamatan Campaka & 0 \\ \hline
-55 & Kecamatan Cibinong & 6 \\ \hline
-56 & Kecamatan Cidaun & 1 \\ \hline
-57 & Kecamatan Campakamulya & 1 \\ \hline
-58 & Kecamatan Cikadu & 1 \\ \hline
-59 & Kecamatan Cijati & 1 \\ \hline
-60 & Kecamatan Cipanas & 15 \\ \hline
-61 & Kecamatan Gekbrong & 6 \\ \hline
-62 & Kecamatan Haurwangi & 2 \\ \hline
-63 & Kecamatan Karangtengah & 1 \\ \hline
-64 & Kecamatan Kadupandak & 1 \\ \hline
-65 & Kecamatan Leles & 5 \\ \hline
-66 & Kecamatan Mande & 6 \\ \hline
-67 & Kecamatan Naringgul & 6 \\ \hline
-68 & Kecamatan Pacet & 17 \\ \hline
-69 & Kecamatan Pasirkuda & 0 \\ \hline
-70 & Kecamatan Sukaluyu & 5 \\ \hline
-71 & Kecamatan Sukaresmi & 14 \\ \hline
-72 & Kecamatan Sukanagara & 5 \\ \hline
-73 & Kecamatan Sindangbarang & 1 \\ \hline
-74 & Kecamatan Takokak & 8 \\ \hline
-75 & Kecamatan Tanggeung & 18 \\ \hline
-76 & Kecamatan Warungkondang & 0 \\ \hline
+30 & RSUD dan Puskesmas & 61 \\ \hline
+31 & RSUD Sayang & 1 \\ \hline
+32 & RSUD Cimacan & 0 \\ \hline
+33 & RSUD Pagelaran & 0 \\ \hline
+34 & RSUD Sindangbarang & 0 \\ \hline
+35 & Kecamatan & 2 \\ \hline
+36 & Kecamatan Pagelaran & 1 \\ \hline
+37 & Kecamatan Agrabinta & 8 \\ \hline
+38 & Kecamatan Bojongpicung & 2 \\ \hline
+39 & Kecamatan Cianjur & 13 \\ \hline
+40 & Kecamatan Cibeber & 20 \\ \hline
+41 & Kecamatan Cilaku & 10 \\ \hline
+42 & Kecamatan Ciranjang & 2 \\ \hline
+43 & Kecamatan Cugenang & 16 \\ \hline
+44 & Kecamatan Cikalongkulon & 2 \\ \hline
+45 & Kecamatan Campaka & 0 \\ \hline
+46 & Kecamatan Cibinong & 6 \\ \hline
+47 & Kecamatan Cidaun & 1 \\ \hline
+48 & Kecamatan Campakamulya & 1 \\ \hline
+49 & Kecamatan Cikadu & 1 \\ \hline
+50 & Kecamatan Cijati & 1 \\ \hline
+51 & Kecamatan Cipanas & 15 \\ \hline
+52 & Kecamatan Gekbrong & 6 \\ \hline
+53 & Kecamatan Haurwangi & 2 \\ \hline
+54 & Kecamatan Karangtengah & 1 \\ \hline
+55 & Kecamatan Kadupandak & 1 \\ \hline
+56 & Kecamatan Leles & 5 \\ \hline
+57 & Kecamatan Mande & 6 \\ \hline
+58 & Kecamatan Naringgul & 6 \\ \hline
+59 & Kecamatan Pacet & 17 \\ \hline
+60 & Kecamatan Pasirkuda & 0 \\ \hline
+61 & Kecamatan Sukaluyu & 5 \\ \hline
+62 & Kecamatan Sukaresmi & 14 \\ \hline
+63 & Kecamatan Sukanagara & 5 \\ \hline
+64 & Kecamatan Sindangbarang & 1 \\ \hline
+65 & Kecamatan Takokak & 8 \\ \hline
+66 & Kecamatan Tanggeung & 18 \\ \hline
+67 & Kecamatan Warungkondang & 0 \\ \hline
 
 \rowcolor{lightgray}
 \multicolumn{2}{|c|}{\textbf{Total SOP}} & \textbf{700} \\ \hline
 
 \end{longtable}
 }
+
 
 
 Sebagaimana disajikan pada Tabel~\ref{tab:rekap_jumlah_sop}, total SOP yang telah
