--- a/502-bab-5-daftar-sop.tex
+++ b/502-bab-5-daftar-sop.tex
@@ -52,15 +52,15 @@ daerah.
 \input{subcontents/502/26-badan-kepegawaian-dan-pengembangan-sdm.tex}
 \input{subcontents/502/27-badan-penanggulangan-bencana.tex}
 \input{subcontents/502/28-badan-kesatuan-bangsa.tex}
-\input{subcontents/502/30-bagian-umum-keuangan-sekda.tex}
-\input{subcontents/502/39-bagian-organisasi-sekda.tex}
-\input{subcontents/502/33-bagian-pemerintah-sekda.tex}
-\input{subcontents/502/34-bagian-kesejahteraan-rakyat-sekda.tex}
-\input{subcontents/502/35-bagian-hukum-sekda.tex}
-\input{subcontents/502/36-bagian-administrasi-pembangunan-sekda.tex}
-\input{subcontents/502/37-bagian-perekonomian-sdm-sekda.tex}
-\input{subcontents/502/38-bagian-pbj-sekda.tex}
-\input{subcontents/502/40-bagian-protokol-komunikasi-sekda.tex}
+% \input{subcontents/502/30-bagian-umum-keuangan-sekda.tex}
+% \input{subcontents/502/39-bagian-organisasi-sekda.tex}
+% \input{subcontents/502/33-bagian-pemerintah-sekda.tex}
+% \input{subcontents/502/34-bagian-kesejahteraan-rakyat-sekda.tex}
+% \input{subcontents/502/35-bagian-hukum-sekda.tex}
+% \input{subcontents/502/36-bagian-administrasi-pembangunan-sekda.tex}
+% \input{subcontents/502/37-bagian-perekonomian-sdm-sekda.tex}
+% \input{subcontents/502/38-bagian-pbj-sekda.tex}
+% \input{subcontents/502/40-bagian-protokol-komunikasi-sekda.tex}
 \input{subcontents/502/29-rsud-puskesmas.tex}
 \input{subcontents/502/31-rsud-sayang.tex}
 \input{subcontents/502/73-rsud-cimacan.tex}
