--- a/subcontents/502/01-sekretariat-daerah.tex
+++ b/subcontents/502/01-sekretariat-daerah.tex
@@ -7,38 +7,38 @@ SOP yang ditampilkan mencerminkan peran Sekretariat Daerah sebagai unsur staf
 yang membantu kepala daerah dalam penyelenggaraan pemerintahan.
 
 {\footnotesize
-\begin{longtable}{
-|>{\centering\arraybackslash}p{0.5cm}
-|p{6cm}
-|p{3cm}
-|>{\centering\arraybackslash}p{3cm}|
+\begin{longtable}{|
+>{\centering\arraybackslash}p{0.5cm}|
+p{5.2cm}|
+p{2.2cm}|
+>{\centering\arraybackslash}p{2cm}|
+>{\centering\arraybackslash}p{2cm}|
 }
-\caption{Daftar SOP Sekretariat Daerah} \label{tab:daftar_sop} \\
+\caption{Daftar SOP dan Status Verifikasi} \label{tab:daftar_sop_status} \\
 \hline
 \rowcolor{lightgray}
-\textbf{No} & \textbf{Judul SOP} & \textbf{Nomor} & \textbf{Tanggal Pembuatan} \\
+\textbf{No} & \textbf{Judul SOP} & \textbf{Nomor SOP} & \textbf{Tanggal Pembuatan} & \textbf{Status Verifikasi} \\
 \hline
 \endfirsthead
 
 \hline
 \rowcolor{lightgray}
-\textbf{No} & \textbf{Judul SOP} & \textbf{Nomor} & \textbf{Tanggal Pembuatan} \\
+\textbf{No} & \textbf{Judul SOP} & \textbf{Nomor SOP} & \textbf{Tanggal Pembuatan} & \textbf{Status Verifikasi} \\
 \hline
 \endhead
 
 \hline
 \endfoot
 
-1 & Pengusulan Surat Cuti Pegawai & 04/82/2026 & 7 Januari 2026 \\
 \hline
-2 & Pengusulan Pensiun & 03/82/2026 & 7 Januari 2026 \\
-\hline
-3 & Pengusulan Kenaikan Gaji Berkala & 02/82/2026 & 7 Januari 2026 \\
-\hline
-4 & Pengusulan Kenaikan Pangkat & 01/82/2026 & 7 Januari 2026 \\
-\hline
-5 & SOP Unit Testing 2025 & SOPUnit/Testing/ 2025 & 6 November 2025 \\
-\hline
+\endlastfoot
+
+1 & Pengajuan Kenaian Gaji Berkala & 001/82/2026 & 10 Januari 2026 & Konsep \\ \hline
+2 & Pengusulan Kenaikan Pangkat & 01/82/2026 & 7 Januari 2026 & Konsep \\ \hline
+3 & Pengusulan Kenaikan Gaji Berkala & 02/82/2026 & 7 Januari 2026 & Konsep \\ \hline
+4 & Pengusulan Pensiun & 03/82/2026 & 7 Januari 2026 & Konsep \\ \hline
+5 & Pengusulan Surat Cuti Pegawai & 04/82/2026 & 7 Januari 2026 & Konsep \\ \hline
+6 & SOP Unit Testing 2025 & SOPUnit/ Testing/2025 & 6 November 2025 & Setuju \\ \hline
 
 \end{longtable}
 }
