--- a/001-kata-pengantar-antara.tex
+++ b/001-kata-pengantar-antara.tex
@@ -26,7 +26,7 @@ akuntabel di lingkungan Pemerintah Kabupaten Cianjur.
 
 \vspace{1cm}
 
-\noindent Cianjur, November 2025 \\
+\noindent Cianjur, Oktober 2025 \\
 
 \vspace{12pt}
 \vspace{12pt}
